* [Bug 1681] from 4.2.6p3-RC10: More sntp logging cleanup.
* [Bug 1683] from 4.2.6p3-RC10: Non-localhost on loopback exempted from
  nic rules.
(4.2.7p80) 2010/11/10 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1574] from 4.2.6p3-RC9: sntp doesn't set tv_usec correctly.
* [Bug 1681] from 4.2.6p3-RC9: sntp logging cleanup.
* [Bug 1683] from 4.2.6p3-RC9: Interface binding does not seem to work
  as intended.
* [Bug 1708] make check fails with googletest 1.4.0.
* [Bug 1709] from 4.2.6p3-RC9: ntpdate ignores replies with equal
  receive and transmit timestamps.
* [Bug 1715] sntp utilitiesTest.IPv6Address failed.
* [Bug 1718] Improve gtest checks in configure.ac.
(4.2.7p79) 2010/11/07 Released by Harlan Stenn <stenn@ntp.org>
* Correct frequency estimate with no drift file, from David Mills.
(4.2.7p78) 2010/11/04 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1697] filegen implementation should be improved.
* Refactor calendar functions in terms of new common code.
* Documentation updates from Dave Mills.
(4.2.7p77) 2010/11/03 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1692] packageinfo.sh needs to be "sourced" using ./ .
* [Bug 1695] ntpdate takes longer than necessary.
(4.2.7p76) 2010/11/02 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1690] Unit tests fails to build on some systems.
* [Bug 1691] Use first NMEA sentence each second.
* Put the sntp tests under sntp/ .
* ... and only build/run them if we have gtest.
* Documentation updates from Dave Mills.
(4.2.7p75) 2010/10/30 Released by Harlan Stenn <stenn@ntp.org>
* Documentation updates from Dave Mills.
* Include Linus Karlsson's GSoC 2010 testing code.
(4.2.7p74) 2010/10/29 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1685] from 4.2.6p3-RC8: NMEA driver mode byte confusion.
* from 4.2.6p3-RC8: First cut at using scripts/checkChangeLog.
* Documentation updates from Dave Mills.
(4.2.7p73) 2010/10/27 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1680] Fix alignment of clock_select() arrays.