@@ -9,7 +9,7 @@
 <body>
 <h3>Autokey Public-Key Authentication</h3>
 <p>Last update:
-  <!-- #BeginDate format:En2m -->02-Nov-2010  19:13<!-- #EndDate -->
+  <!-- #BeginDate format:En2m -->11-Nov-2010  3:16<!-- #EndDate -->
   UTC</p>
 <hr>
 <h4>Table of Contents</h4>
@@ -24,31 +24,31 @@
 <h4 id="intro">Introduction</h4>
 <p>This distribution includes support for the  Autokey public key algorithms and protocol specified in RFC-5906 &quot;Network Time Protocol Version 4: Autokey Specification&quot;. This support is available only if the OpenSSL library has been installed and the <tt>--enable-autokey</tt> option   is specified when the distribution is built.</p>
 <p> Public key cryptography is generally considered more secure than symmetric key cryptography, since the security is based on private and public values which are generated by each participant and where the private value is never revealed. Autokey uses X.509 public certificates, which can be produced by commercial services, utility programs in the OpenSSL software library or the <a href="keygen.html"><tt>ntp-keygen</tt></a> utility program in the NTP software distribution.</p>
-<p> The Autokey Version 2 protocol described on the <a href="http://www.eecis.udel.edu/%7emills/proto.html">Autokey Protocol</a> page verifies packet integrity using  message digest algorithms, such as MD5 or SHA,  and verifies the source using  any of several digital signature schemes, including RSA and DSA. Optional identity schemes described on the <a href="http://www.eecis.udel.edu/~mills/ident.html">Autokey Identity Schemes</a> page are based on cryptographic challenge/response exchanges. These schemes provide strong security against  masquerade and most forms of clogging attacks. These schemes are described along with an executive summary, current status, briefing slides and reading list on the <a href="http://www.eecis.udel.edu/~mills/autokey.html">Autonomous Authentication</a> page.</p>
+<p> The Autokey Version 2 protocol described on the <a href="http://www.eecis.udel.edu/%7emills/proto.html">Autokey Protocol</a> page verifies packet integrity using  message digest algorithms, including as MD5 or SHA,  and verifies the source using  any of several digital signature schemes, including RSA and DSA. Optional identity schemes described on the <a href="http://www.eecis.udel.edu/~mills/ident.html">Autokey Identity Schemes</a> page are based on cryptographic challenge/response exchanges. These schemes provide strong security against  masquerade and most forms of clogging attacks. These schemes are described along with an executive summary, current status, briefing slides and reading list on the <a href="http://www.eecis.udel.edu/~mills/autokey.html">Autonomous Authentication</a> page.</p>
 <p>Autokey authenticates individual packets using cookies bound to the IP source and destination addresses. The cookies must have the same addresses at both the server and client. For this reason operation with network address translation schemes is not possible. This reflects the intended robust security model where government and corporate NTP servers are operated outside firewall perimeters.</p>
 <h4 id="config">Configuration</h4>
-<p>The  Trusted Certificate (TC) is recommended for  national NTP time services, such as those operated by NIST and USNO. Configuration for TC is very simple. For each server as root:</p>
+<p>The  Trusted Certificate (TC) scheme is recommended for  national NTP time services, such as those operated by NIST and USNO. Configuration for TC is very simple. For each server, e.g.  <tt>time.nist.gov,</tt> as root:</p>
 <p><tt># cd /usr/local/etc<br>
 # ntp-keygen -T</tt></p>
-<p>This generates an RSA private/public key pair and a self-signed certificate for  the RSA digital signature algorithm  with  the MD5 message digest algoirhtm. Include in the <tt>ntp.conf</tt> configuration file something like</p>
+<p>This generates an RSA private/public host key file and a self-signed certificate file for  the RSA digital signature algorithm  with  the MD5 message digest algorithm. Include in the <tt>ntp.conf</tt> configuration file something like</p>
 <p><tt># disable kernel<br>
   # server 127.127.18.1	minpoll 12 maxpoll 17 # ACTS modem<br>
 # phone atdt913035547785 atddt913034944774<br>
   # crypto<br>
 # driftfile /etc/nto.drift.</tt></p>
-<p>Note the first three lines  are specific to the ACTS driver and NIST phone numbers. The second number will be tried if the first times out. Any other reference clock can be used, or even another time server.</p>
-<p>For each client as root,</p>
+<p>Note the first three lines  are specific to the ACTS driver and NIST modem telephone  numbers. The second number will be tried if the first times out. Alternatively, any other reference clock can be used, or even another time server.</p>
+<p>For each client, e.g. <tt>grundoon.udel.edu,</tt> as root:</p>
 <p><tt># cd /usr/local/etc<br>
 # ntp-keygen</tt></p>
-<p>(There is no -<tt>T</tt> option). Include in the <tt>ntp.conf</tt> configuration file for a client such as grundoon.udel.edu something like</p>
-<p><tt># server time.nist.gov iburst<br>
+<p>(There is no -<tt>T</tt> option). Include in the <tt>ntp.conf</tt> configuration file something like</p>
+<p><tt># server time.nist.gov iburst autokey<br>
  # crypto<br>
 # driftfile /etc/nto.drift.</tt></p>
-<p>It is possible to configure client hosts of server grundoon in the same way with the server line pointing to grundoon. Dependent clients  authenticate to time.nistg.gov through grundoon.udel.edu.</p>
-<p>In the above configuration examples, the default autokey host name is the string  returned by the Unix gethostbyname() library routine. The host name is used as the subject and issuer names on the certificate, as well as the default deault password for the host key and certificate files. The host name can be chaned using the -s option with the ntp-keygen program. The default password can be changed using the -p optoin for the ntp-keygen and the pw option of the crypto command. </p>
+<p>It is possible to configure clients  of server <tt>grundoon.udel.edu</tt> in the same way with the server line pointing to <tt>grundoon.udel.edu</tt>. Dependent clients  authenticate to <tt>time.nistg.gov</tt> through <tt>grundoon.udel.edu</tt>.</p>
+<p>In the above configuration examples, the default autokey host name is the string  returned by the Unix <tt>gethostbyname()</tt> library routine. This name has nothing to do with the DNS name of the host. The autokey host name is used as the subject and issuer names on the certificate, as well as the default  password for the host key file. The autokey host name can be changed using the <tt>-s</tt> option with the <tt>ntp-keygen</tt> program. The default password can be changed using the <tt>-p</tt> option with the <tt>ntp-keygen</tt> program and the <tt>pw</tt> option of the <tt>crypto</tt> command. </p>
 <p>It is important to note that certificates have a defined lifetime of one year from the time of creation. Sometime toward the end of the liftetime period, it is necessary to create a new certificat at both the server and client. For each server and client as root:</p>
 <p><tt># ntp_keygen</tt></p>
-<p>The options are copied from the current certificarte.</p>
+<p>The options are copied from the current certificate.</p>
 <p>&nbsp;</p>
 <p>There are three timeouts associated with the Autokey scheme. The key list timeout, which defaults to about 1.1 h, specifies the interval between generating new key lists. The revoke timeout, which defaults to about 36 hr, specifies the interval between generating new private values. The restart timeout, with default about 5 d, specifies the interval between protocol restarts to refresh public values. In general, the behavior when these timeouts expire is not affected by the issues discussed on this page.</p>
 <h4 id="group">NTP Secure Groups</h4>
